language/move-compiler/tests/move_check/parser/friend_decl_inside_function.exp
error[E02011]: invalid 'friend' declaration
  ┌─ tests/move_check/parser/friend_decl_inside_function.move:6:9
  │
6 │         friend 0x42::A;
  │         ^^^^^^^^^^^^^^^ 'friend' is not allowed in expression sequence

